src/rules/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S102_S102.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    ExecUsed: ~
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 17
  fix: ~
  parent: ~
- kind:
    ExecUsed: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 13
  fix: ~
  parent: ~

