src/rules/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S106_S106.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    HardcodedPasswordFuncArg: s3cr3t
  location:
    row: 13
    column: 8
  end_location:
    row: 13
    column: 25
  fix: ~
  parent: ~

